# influxdb-browser

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: influx.rs  main.rs  ui.rs
