[package]
name = "influxdb-browser"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["default"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
chrono = "0.4"
anyhow = "1.0"
rfd = "0.14"
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'

[profile.dev]
opt-level = 1
